editar de aluno

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Idade:<input id="idade_aluno" type="number"><br>
         Matrícula:<input id="matricula_aluno"><br>
         <button onclick="controladorAluno.inserir()">Cadastrar</button>
-        <button onclick="controladorDisiciplina.atualizar()">Editar</button><br>
+        <button onclick="controladorAluno.atualizar()">Editar</button><br>
     </div>
     <div><p>Cadastrar disciplina</p>
         Nome:<input id="nome_disciplina"><br>
